[package]
name = "shrapnel"
version = "0.1.0"
authors = ["aeldar <eldar.aliyev8@gmail.com>"]
edition = "2018"

license-file = "LICENSE"
description = "A tiny utility to run multiple processes for development purposes."
homepage = "https://github.com/aeldar/shrapnel"
documentation = "https://github.com/aeldar/shrapnel"
repository = "git@github.com:aeldar/shrapnel.git"

exclude = [".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4.3"

[profile.release]
## optimization technics taken from https://github.com/johnthagen/min-sized-rust
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'